tests/negative/test_sym_type_undef_tup.orb
data Foo;

fnc main () () {
    sym x:(i32 Foo);
};